# time-loop-tui-game

./: Cargo.toml  LICENSE.txt  README.md  features.md
src/: combat.rs  config.rs  items.rs  main.rs  map.rs  menu.rs  player.rs  rooms.rs
src/combat/: health.rs
src/map/: actions.rs  enemies.rs  food.rs  transitions.rs  weapons.rs
src/menu/: fallback.rs  tests.rs  unix.rs
src/menu/unix/: consts.rs  rendering.rs  tests.rs  text_layout.rs
src/player/: tests.rs
