[package]
name = "rust-text-game"
version = "1.0.0"
edition = "2021"

[target.'cfg(unix)'.dependencies]
termion = "*" # For controlling the terminal
unicode-segmentation = "*" # For splitting text into graphemes
unicode-width = "*" # For getting the width of characters
nix = "*" # For the unix select syscall

[features]
no-flicker = [] # Doesn't clear the terminal after each frame. Reduces flicker but may lead to rendering bugs.